fix(filter): prevent filter fields tooltip from wrapping

--- a/src/app/filter/filter-fields.component.less
+++ b/src/app/filter/filter-fields.component.less
@@ -7,6 +7,9 @@
       padding-left: 0;
       width: 275px;
     }
+    .tooltip {
+      white-space: nowrap;
+    }
     .typeahead-input-container {
       position: relative;
       padding-right: 0;
